# holy-bot-nu-serv

./: .gitignore  1.sh  1.txt  Cargo.toml  LICENSE  TODO  default.nix  rustfmt.toml
scripts/: 80.sh  deploy.sh  init.sql  init2.sql  run.sh  sql-analyze.py  sql-analyze2.sh  test.py  test2.py
src/: db.rs  db_mx.rs  db_tg.rs  db_tg_ava.rs  db_util.rs  error.rs  main.rs  process_log.rs  server.rs
