[package]
name = "batch"
version = "0.1.0"
authors = ["Albert Safin <xzfcpw@gmail.com>"]

[dependencies]
rusqlite = "0.11.0"
telegram-bot = "0.6"
tokio-core = "0.1.17"
telegram-bot-raw = "0.6"
rand = "0.5.3"

serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0.22" 
hyper = "0.12"
url = "1.7.0"
futures = "0.1.21"
reqwest = "0.8.4"
